# sneaker_shop

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/auth_service/: .env.template  Dockerfile  alembic.ini  pyproject.toml
backend/auth_service/alembic/: env.py
backend/auth_service/auth_service/: __init__.py  add_middleware.py  main.py  middlewares.py
backend/auth_service/auth_service/auth/: config.py  seed.py
backend/auth_service/auth_service/auth/authentication/: backends.py  custom_jwt.py  custom_register_router.py  custom_reset_router.py  custom_routers.py  custom_strategy.py  custom_users_router.py  custom_verify_router.py  fastapi_users.py  fastapi_users_custom.py  oauth.py  routers.py  strategy.py  transport.py  user_manager.py  users.py
backend/auth_service/auth_service/auth/celery_tasks/: auth_tasks.py
backend/auth_service/auth_service/auth/dependencies/: check_permissions.py  get_current_user.py  oauth_account.py  permissions.py  user_manager.py  (+1 more)
backend/auth_service/migrations/: env.py
backend/auth_service/migrations/versions/: 2025_05_31_1925-3004773bf4b7_create_user_table.py  2025_08_08_1822-59740b8e8978_изменены_свойства_полей_в_таблице_user.py  2025_08_15_1717-12bf59e6749e_blacklist_table_created.py  2025_09_03_1804-41adb231713a_tables_role_permission_role_permission_.py  2025_12_27_0730-acac95520b2a_refinement_of_table_field_properties.py
backend/cart_service/: .env.template  Dockerfile  pyproject.toml
backend/cart_service/cart_service/: __init__.py  main.py
backend/cart_service/cart_service/cart/: config.py
backend/cart_service/migrations/: env.py
backend/cart_service/migrations/versions/: 2025_10_13_0558-195ff4a86259_all_tables_related_to_information_about_.py  2025_10_14_0938-425629f79663_in_the_cart_sneaker_associations_table_.py  2025_12_17_2047-bcf84de164a8_added_cascading_deletion_and_restrict.py  2025_12_20_0518-e73d84a0c1b1_indexes_on_foreign_keys_have_been_added.py
backend/catalog_service/: .env.template  Dockerfile  pyproject.toml
backend/catalog_service/catalog_service/: __init__.py  main.py
backend/catalog_service/catalog_service/catalog/: config.py  seed.py
backend/catalog_service/migrations/: env.py
backend/catalog_service/migrations/versions/: 2025_06_08_1414-f02aa464cdf9_create_all_tables.py  2025_12_17_2114-fde5eeacd1de_added_cascading_deletion_and_restrict.py  2025_12_20_0523-c83ab191dbec_indexes_on_foreign_keys_have_been_added.py  2025_12_27_0740-33611ea43879_refinement_of_table_field_properties.py  2025_12_27_0751-78a2d1f40298_adding_the_is_active_field_to_the_table_.py
backend/favorite_service/: .env.template  Dockerfile  alembic.ini  pyproject.toml
backend/favorite_service/favorite_service/: main.py
backend/favorite_service/favorite_service/favorite/: config.py
backend/favorite_service/migrations/: env.py
backend/favorite_service/migrations/versions/: 2025_06_08_1439-ed2c1f041b3a_create_favorite_favorite_sneaker.py  2025_10_16_0917-939b9c8348ab_create_tables_brands_sneakers_sizes_.py
backend/infrastructure/celery_client/: pyproject.toml
backend/infrastructure/celery_client/celery_connection/: celery_getter.py
backend/infrastructure/redis_client/: pyproject.toml
backend/infrastructure/redis_client/redis_connection/: factory.py
backend/microservices/sneaker_views_clickhouse_writer/: .env.template  Dockerfile  alembic.ini  pyproject.toml
backend/microservices/sneaker_views_clickhouse_writer/migrations/: env.py
backend/microservices/sneaker_views_clickhouse_writer/sneaker_views_clickhouse_writer/: main.py
backend/sneaker_details_service/: .env.template  Dockerfile  pyproject.toml
backend/sneaker_details_service/migrations/: env.py
backend/sneaker_details_service/sneaker_details_service/: __init__.py  main.py
backend/sneaker_details_service/sneaker_details_service/sneaker_details/: __init__.py  config.py  seed.py
backend/sneaker_views_clickhouse_writer/: Dockerfile  alembic.ini  pyproject.toml
backend/sneaker_views_clickhouse_writer/migrations/: env.py
backend/sneaker_views_clickhouse_writer/migrations/versions/: 2025_09_27_0801-8be280d8af6c_creating_the_sneaker_views_histories_.py  2025_10_01_0824-d66a9a2fc136_creating_the_sneaker_views_histories.py
backend/sneaker_views_clickhouse_writer/sneaker_views_clickhouse_writer/: add_middleware.py  main.py
backend/sneaker_views_clickhouse_writer/sneaker_views_clickhouse_writer/clickhouse_writer/: config.py
backend/sneaker_views_clickhouse_writer/sneaker_views_clickhouse_writer/sneaker_views/: config.py
backend/sneaker_views_history_service/: pyproject.toml
backend/sneaker_views_history_service/sneaker_views_history_service/: __init__.py  main.py
backend/sneaker_views_history_service/sneaker_views_history_service/user_history/: config.py
backend/sneaker_views_history_service/user_history_service/: __init__.py
backend/sneaker_views_redis_writer/: Dockerfile  pyproject.toml
backend/sneaker_views_redis_writer/sneaker_views_redis_writer/: main.py
backend/sneaker_views_redis_writer/sneaker_views_redis_writer/sneaker_views/: config.py
backend/stock_notification_service/: .env.template  pyproject.toml
backend/stock_notification_service/migrations/versions/: 2025_12_02_0949-0d0fef4039fc_add_tables_sizes_sneaker_size_.py  2025_12_02_2023-cb8c6f918d25_adding_the_size_id_field_to_the_user_.py  2025_12_23_1930-263a4db61f4a_refinement_of_table_field_properties.py  2025_12_26_0959-8ad85747778f_adding_a_status_field_of_the_enum_type.py  2025_12_27_0755-10729e6b24d3_adding_the_is_active_field_to_the_table_.py
backend/stock_notification_service/stock_notification_service/: __init__.py  add_middleware.py  main.py
backend/stock_notification_service/stock_notification_service/stock_notification/: config.py
backend/user_history_service/: Dockerfile  pyproject.toml
backend/user_history_service/user_history_service/: __init__.py  main.py
backend/user_history_service/user_history_service/user_history/: config.py
kafka/: consumer.py  consumer_settings.py  producer.py  pyproject.toml
(+975 files in other folders)
