[tool.poetry]
name = "catalog_service"
version = "0.1.0"
description = "Микросервис для каталога товаров"
authors = ["Kirill <bondarenkokirill150208@gmail.com>"]
readme = "README.md"
packages = [{ include = "catalog_service" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pydantic = {extras = ["email"], version = "^2.11.5"}
pydantic-settings = "^2.9.1"
asyncpg = "^0.30.0"
alembic = "^1.16.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
fastapi-mail = "^1.5.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
catalog_seeds = "catalog_service.catalog.seed:start_seeds"
