[tool.poetry]
name = "sneaker-views-clickhouse-writer"
version = "0.1.0"
description = ""
authors = ["Kirill <bondarenkokirill150208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.36.0"
fastapi = {extras = ["standard"], version = "^0.117.1"}
pydantic-settings = "^2.10.1"
aiokafka = "^0.12.0"
clickhouse-driver = "^0.2.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
clickhouse-sqlalchemy = {extras = ["alembic"], version = "^0.3.2"}
alembic = "1.16.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
