[tool.poetry]
name = "sneaker-views-redis-writer"
version = "0.1.0"
description = ""
authors = ["Kirill <bondarenkokirill150208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.35.0"
fastapi = {extras = ["standard"], version = "^0.116.2"}
pydantic-settings = "^2.10.1"
aiokafka = "^0.12.0"
redis = {extras = ["hiredis"], version = "^6.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
